[package]
name = "liquid-php"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "*"
liquid = { version="0.26.1"}
# liquid-lib = { version = "^0.26.1", features=[ "stdlib", "shopify", "extra"] }

[profile.release]
strip = "debuginfo"
